@@ -29,9 +29,7 @@ debian/console-setup.config debian/console-setup-mini.config: debian/config.prot
     next; \
 } \
 /## *KBDNAMES *##/ { \
-    printf "kbdnames='\''"; \
     system("cd Keyboard && ./kbdnames-maker MyKeyboardNames.pl"); \
-    printf "'\''"; \
     next; \
 } \
 { \
