@@ -1,9 +1,13 @@
 console-setup (1.35) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Merge from Ubuntu:
     - Treat the Kazakh layout (kz) as non-Latin (LP: #356816).
     - Set default layout for Morocco to 'ma'.
   * Handle temporary output files better in kbdcompiler (closes: #524556).
+
+  [ Samuel Thibault ]
+  * Fetch keyboard names translations from xkeyboard-config.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 05 May 2009 18:17:23 +0100
 
